<resources>
    <string name="app_name">Simon Says</string>
    <string name="start_game">Start Game</string>
    <string name="quit_game">Quit Game</string>
    <string name="play_again">Play Again</string>
    <string name="high_score">High Score</string>

    <string name="easy_mode">Easy Mode</string>
    <string name="medium_mode">Medium Mode</string>
    <string name="hard_mode">Hard Mode</string>

    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="difficulty">Difficulty</string>
    <string name="date_play">Date Play</string>
    <string name="empty_data">Empty</string>

    <string name="timer">Timer</string>
    <string name="who_turn">Who Turn</string>
    <string name="ready">Ready?</string>
    <string name="simon_turn">Simon is saying…</string>
    <string name="player_turn">Your Turn!</string>
    <string name="miss">Miss!</string>

    <string name="game_over">GAME OVER</string>
</resources>
